--- a/vuex/vuex-hello/package.json
+++ b/vuex/vuex-hello/package.json
@@ -24,6 +24,8 @@
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "lint-staged": "^7.2.2",
     "vue-template-compiler": "^2.5.17"
   },
