--- a/vuex/vuex-hello/package.json
+++ b/vuex/vuex-hello/package.json
@@ -4,24 +4,29 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --watch",
-    "build": "vue-cli-service build",
+    "build": "VUE_APP_TYPE=production  vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "cropperjs": "^1.5.1",
     "vue": "^2.5.17",
+    "vue-cropper": "git+https://github.com/xyxiao001/vue-cropper.git",
+    "vue-cropperjs": "^3.0.0",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.1",
-    "@vue/cli-plugin-unit-mocha": "^3.1.1",
-    "@vue/cli-service": "^3.1.1",
+    "@vue/cli": "^3.6.3",
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.15",
+    "@vue/cli-service": "^3.3.0",
+    "@vue/eslint-config-airbnb": "^3.0.0-beta.16",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@vue/test-utils": "^1.0.0-beta.16",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
     "eslint": "^5.8.0",
